bala changes dates

--- a/css/icomoon.css
+++ b/css/icomoon.css
@@ -627,7 +627,7 @@
 .icon-install:before {
   content: "\e946";
 }
-.icon-layers2:before {
+.icon-layeBS2:before {
   content: "\e947";
 }
 .icon-open-book:before {
